# data-immo

./: .gitignore  Cargo.toml  LICENSE  README.md  data_from_dvf.txt  docker-compose.yml  requirements.txt  schema.txt
database/: init.sql
databases/: init.sql  remove_duplicates.sql
dbt_dremio/: dbt_project.yml
dbt_immo/: dbt_project.yml
dbt_immo/macros/tests/: strict_positive.sql  text_length.sql
dbt_immo/models/: schema.yml
dbt_immo/models/classes/: classes.sql  schema.yml
dbt_immo/models/mutations/: mutations.sql  schema.yml
src/: extract.rs  geometry.rs  main.rs
src/extract/: api_dvf.rs  duckdb.rs  geometry.rs  mod.rs  utils.rs
src/load/: core.rs  dbt.rs  dremio.rs  duckdb.rs  mod.rs
src/pipeline/: core.rs  mod.rs  pipeline.rs  task.rs
src/transform/: api_dvf.rs  duckdb.rs  mod.rs  parquet_data.rs  tables.rs  utils.rs
