[package]
name = "data-immo"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
duckdb = { version = "1.3.2", features = [] }
futures = "0.3.31"
mylog = "0.1.4"
regex = "1.11.1"
reqwest = {version = "0.12.23", features = ["json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tokio = {version = "1.47.1", features = ["full"]}

[profile.dev]
incremental = true
