[package]
name = "data-immo"
version = "0.1.0"
edition = "2024"

[dependencies]
duckdb = { version = "1.3.2", features = ["bundled"] }
futures = "0.3.31"
mylog = "0.1.4"
parquet = { version = "50.0.0", features = ["arrow"] }
arrow = { version = "50.0", features = ["prettyprint"] }
chrono = "0.4.0"
regex = "1.11.1"
reqwest = {version = "0.12.23", features = ["json", "blocking"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tokio = {version = "1.47.1", features = ["full"]}

[profile.dev]
incremental = true
